add authorization + send email from contact form + add project, but without file upload

--- a/app/feedback.html
+++ b/app/feedback.html
@@ -95,7 +95,7 @@
 				<div class="main_line"><h1>У вас интересный проект? Напишите мне</h1></div>
 				<div class="main_information">
 					<div class="contact_form clearfix">
-						<form action="php/upload.php" method="post" enctype="multipart/form-data" class="form">
+						<form role="form"  method="post" enctype="multipart/form-data" class="form">
 							<div class="form_block">
 								<div class="input_group">
 									<div class="inputs left"><label for="input_name">Имя</label>
@@ -112,7 +112,7 @@
 										<textarea id="input_message" name="message" cols="40" rows="6"   placeholder="Кратко в чем суть" class="for_input"></textarea>
 									</div>	
 								</div>				
-								<div class="g-recaptcha" data-sitekey="6LfCzhcTAAAAAKyRgaqEOGaJSqnG_E2i8MAaGnmq"></div>	
+									<div class="g-recaptcha" data-sitekey="6Lfo1xcTAAAAAM25BP5Zk-7zjCaZsigL6RuKefy0"></div>
 								<div class="buttons">
 									<button type="reset" id="feedback-reset">Очистить</button>
 									<button type="submit" id="feedback-submit">Отправить</button>		
@@ -147,7 +147,9 @@
 	<script src="js/main.js"></script>
 	<script src="js/popup.js"></script>
 	<script src="js/adapt_menu.js"></script>
-	<script src="js/modul.js"></script>
+	<script src="js/contact_me.js"></script>
+	<script src="js/add_project.js"></script>
+	<script src="js/validate.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
