--- a/app/404.html
+++ b/app/404.html
@@ -37,7 +37,7 @@
  <![endif]-->
 <div class="wrapper">
 	<div class="lk">
-		<img src="images/404.jpg" alt="">
+		<h1>Такой страницы не существует. <a href="index.html">Вернуться на главную.</a></h1>
 	</div>
 	<div class="empty"></div>
 </div>
@@ -60,6 +60,11 @@
 	<!-- endbuild -->
 	<!-- build:js js/main.min.js -->
 	<script src="js/main.js"></script>
+	<script src="js/popup.js"></script>
+	<script src="js/adapt_menu.js"></script>
+	<script src="js/contact_me.js"></script>
+	<script src="js/add_project.js"></script>
+	<script src="js/validate.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
