--- a/app/index.html
+++ b/app/index.html
@@ -193,7 +193,9 @@
 	<script src="js/main.js"></script>
 	<script src="js/popup.js"></script>
 	<script src="js/adapt_menu.js"></script>
-	<script src="js/modul.js"></script>
+	<script src="js/contact_me.js"></script>
+	<script src="js/add_project.js"></script>
+	<script src="js/validate.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
